--- a/src/main/resources/profile/local/application.conf
+++ b/src/main/resources/profile/local/application.conf
@@ -11,5 +11,6 @@ awsRedshiftParamaters{
   host = examplecluster.cbofvq1ke8eb.eu-west-1.redshift.amazonaws.com
   port = 5439
   s3BucketfolderPath = pjgg-redshift-spark/temp/
+  aws_iam_role = XXX
 }
 
