add envParams in properties

--- a/src/main/resources/profile/local/application.conf
+++ b/src/main/resources/profile/local/application.conf
@@ -1,13 +1,13 @@
 
 awsCredentials {
-  awsAccessKey = XXX
-  awsSecretKey = XXX
+  awsAccessKey = ${?ENV_ACCESSKEY}
+  awsSecretKey = ${?ENV_SECRET_KEY}
 }
 
 awsRedshiftParamaters{
   dbName = dev
   user = masteruser
-  password = XXX
+  password = ${?ENV_PASSWORD}
   host = examplecluster.cbofvq1ke8eb.eu-west-1.redshift.amazonaws.com
   port = 5439
   s3BucketfolderPath = pjgg-redshift-spark/temp/
