--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ branches:
   - master
 install: mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script: mvn test
+after_success:
+  - mvn cobertura:cobertura coveralls:report -DrepoToken=$repoToken -DtravisJobId=$TRAVIS_JOB_ID
 
 notifications:
   email:
