--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
         <scala.binary.version>2.11</scala.binary.version>
         <scala.version>2.11.7</scala.version>
         <spark.version>1.6.0</spark.version>
+        <repoToken>fakeToken</repoToken>
+        <travisJobId>fakeTravisJobId</travisJobId>
     </properties>
 
     <repositories>
@@ -326,6 +328,40 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.1.0</version>
+                <configuration>
+                    <repoToken>${repoToken}</repoToken>
+                    <sourceDirectories>
+                        <sourceDirectory>src/main/scala</sourceDirectory>
+                    </sourceDirectories>
+                    <coberturaReports>
+                        <coberturaReport>
+                            ${basedir}/target/coverage.xml
+                        </coberturaReport>
+                    </coberturaReports>
+                    <sourceEncoding>UTF-8</sourceEncoding>
+                    <serviceName>travis-ci</serviceName>
+                    <serviceJobId>${travisJobId} </serviceJobId>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <check>false</check>
+                    <format>xml</format>
+                    <maxmem>256m</maxmem>
+                    <!-- aggregated reports for multi-module projects -->
+                    <aggregate>true</aggregate>
+                    <outputDirectory>${basedir}/target</outputDirectory>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
