changes in order to support AWS EMR spark

--- a/src/main/resources/profile/emr/application.conf
+++ b/src/main/resources/profile/emr/application.conf
@@ -1,16 +1,15 @@
 
 awsCredentials {
-  awsAccessKey = ${?ENV_ACCESSKEY}
-  awsSecretKey = ${?ENV_SECRET_KEY}
+  awsAccessKey = AKIAIOHHLS2CQ2WI4AAA
+  awsSecretKey = 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
 }
 
 awsRedshiftParamaters{
   dbName = dev
   user = masteruser
-  password = ${?ENV_PASSWORD}
+  password = Alfacentaury11
   host = examplecluster.cbofvq1ke8eb.eu-west-1.redshift.amazonaws.com
   port = 5439
   s3BucketfolderPath = pjgg-redshift-spark/temp/
-
 }
 
