--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javac.target>1.8</javac.target>
-        <scala.binary.version>2.11</scala.binary.version>
-        <scala.version>2.11.7</scala.version>
+        <scala.binary.version>2.10</scala.binary.version>
+        <scala.version>2.10.6</scala.version>
         <spark.version>1.6.0</spark.version>
         <repoToken>fakeToken</repoToken>
         <travisJobId>fakeTravisJobId</travisJobId>
@@ -97,18 +97,6 @@
             <version>${scala.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-xml</artifactId>
-            <version>2.11.0-M4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.scala-lang.modules</groupId>
-            <artifactId>scala-parser-combinators_2.11</artifactId>
-            <version>1.0.2</version>
-        </dependency>
-
         <!--logs -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -134,6 +122,7 @@
             <artifactId>spark-core_${scala.binary.version}</artifactId>
             <groupId>org.apache.spark</groupId>
             <version>${spark.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -146,13 +135,6 @@
             <groupId>com.databricks</groupId>
             <artifactId>spark-redshift_${scala.binary.version}</artifactId>
             <version>0.6.0</version>
-        </dependency>
-
-        <!-- Dependency injection -->
-        <dependency>
-            <groupId>org.scaldi</groupId>
-            <artifactId>scaldi_2.11</artifactId>
-            <version>0.5.7</version>
         </dependency>
 
         <!-- acceptance test-->
@@ -176,7 +158,7 @@
 
         <dependency>
             <groupId>info.cukes</groupId>
-            <artifactId>cucumber-scala_2.11</artifactId>
+            <artifactId>cucumber-scala_2.10</artifactId>
             <scope>test</scope>
             <version>1.2.4</version>
         </dependency>
@@ -229,6 +211,13 @@
             </properties>
         </profile>
 
+        <profile>
+            <id>emr</id>
+            <properties>
+                <profile.id>emr</profile.id>
+            </properties>
+        </profile>
+
     </profiles>
 
     <build>
@@ -267,7 +256,7 @@
             </plugin>
 
             <!-- scala -->
-           <plugin>
+            <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
                 <executions>
@@ -318,7 +307,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.sparkRedshift.tutorial.SparkRedshiftTutorialRefactor</mainClass>
+                                    <mainClass>org.sparkRedshift.tutorial.DriverExample</mainClass>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                     <resource>reference.conf</resource>
