--- a/src/main/resources/profile/emr/application.conf
+++ b/src/main/resources/profile/emr/application.conf
@@ -1,13 +1,13 @@
 
 awsCredentials {
-  awsAccessKey = AKIAIOHHLS2CQ2WI4AAA
-  awsSecretKey = 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
+  awsAccessKey = ???
+  awsSecretKey = ???
 }
 
 awsRedshiftParamaters{
   dbName = dev
   user = masteruser
-  password = Alfacentaury11
+  password = ???
   host = examplecluster.cbofvq1ke8eb.eu-west-1.redshift.amazonaws.com
   port = 5439
   s3BucketfolderPath = pjgg-redshift-spark/temp/
